# movementtix

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  listen.sh  pyproject.toml  run.sh  start_chrome.sh  stop_chrome.sh  stop_listener.sh
.github/workflows/: poll.yml
src/movementtix/: browser.py  commands.py  config.py  listener.py  main.py  models.py  notify.py  pricing.py  reddit.py  state.py
src/movementtix/scrapers/: __init__.py  axs.py  base.py  eventim.py  seatgeek.py  stubhub.py  tixel.py  viagogo.py  vividseats.py
tests/: test_pricing.py  test_state.py
