[project]
name = "movementtix"
version = "0.1.0"
description = "Cheap-ticket tracker for Movement Music Festival 2026"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "selectolax>=0.3.21",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "playwright>=1.44",
    "playwright-stealth>=1.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
movementtix = "movementtix.main:cli"
movementtix-listener = "movementtix.listener:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/movementtix"]
